--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>NEW VOXEL FORGE</h2>
     </div>
     <nav id="nav-menu">
-      <ul>
+      <ul id="nav-list">
         <li><a href="#">Home</a></li>
         <li><a href="#">Chaveiros</a></li>
         <li><a href="#">Suportes</a></li>
@@ -27,7 +27,7 @@
 
   <!-- Banner com Carrossel -->
   <section class="banner-container">
-    <div class="banner-slider">
+    <div id="banner-slider" class="banner-slider">
       <img src="src/img/bannerSite/STLFLIX_1920x1080.png" class="banner-img active" alt="Banner 1" loading="lazy">
       <img src="src/img/bannerSite/teste.jpg" class="banner-img" alt="Banner 2" loading="lazy">
       <img src="src/img/bannerSite/teste2.png" class="banner-img" alt="Banner 3" loading="lazy">
